# simple-rest-service

./: LICENSE  README.md  pyproject.toml
simple_rest_service/: echo.py  main.py
